v.0004 GUI Improvements
- Created Attack Indicator
- Added Opp Attack Indicators
- Shows where Opp is attacking
- Used UnitCircle textures and Guard Zone texture
- Fixed hand width overflow (sort of, may need improvements later)

v.0003 Moar Cards
- Updated for ArC v.0000006
- Created TriggerZone component
- Created ICardSpaceBindable interface
- Added New cards, Crimson Butterfly, Brigitte (Grade 3) and Knight of the Harp, Tristan (Grade 2)
- Added New card, Solitary Knight Gancelot
- Added New cards: 
    Flogal,
    BringerOfGoodLuckEpona,
    WeaponsDealerGovannon,
    YggdrasilMaidenElaine,
    StarlightUnicorn,
    CovenantKnightRandolf,
    KnightOfConvictionBors
- Implemented Stand Triggers
- Implemented Hand Skills
- Implemented Intercepting

v.0002 Skills and Trigger selection
- Updated for ArC v.0000004
- Utilize VanguardAI from ArC, InputProviderFactory loads the AI data
- Added Guard value in Card
- Implemented Card can be placed for Guarding
    - Can return cards back to hand
    - When guarding, the cards shows Guard value temporarily
- Rearguards can be retired when attacked successfully
- Can show DropZone cards by clicking on the drop zone 
- Can show Soul cards by long pressing on the vanguard 
- Can show Card Info by clicking from the hand 
- Can show Card Info by clicking from the unit circles 
- Can show Card Info by clicking from the damage zone 
- Can show Card Info by clicking from the card list 
- Created CardList HUD for list of cards
- Created CardInfo HUD for card info
- AI can be loaded on exported APK
- Removed Screen related Gui input handling to reduce headaches and utilize Godot's emulate mouse from touch
- Created QueryActivateSkillStrategy
- Removed ManualAI implementation
- Perform Counter Blast by holding the cards from DamageZone
- Updated Board Indicator to be stackable for temporary indications 
- Added Board Indicator for Guarding
- Separated Panel from CardListPanel
- Implemented Soul Blast